--- a/src/app/campaign/pages/graph-page/graph-page.component.html
+++ b/src/app/campaign/pages/graph-page/graph-page.component.html
@@ -26,13 +26,24 @@
 
       <div class="row mb-3">
         <app-graph
-          class="col-12"
+          class="col-12 mb-2"
           [data]="graph"
           [activeNodesData]="selectedNodes()"
           [centeredNodeData]="searchedNode()"
           (nodeSelectionChanged)="selectedNodes.set($event)"
         />
+        <div class="col-12 d-flex justify-content-end">
+          <button
+            aria-label="shows modal explaining graph data"
+            class="rounded-pill"
+            (click)="openModal(infoModal)"
+          >
+            Help
+            <app-icon [icon]="'info-circle'"></app-icon>
+          </button>
+        </div>
       </div>
+
       <div class="row mb-3">
         <div
           class="d-flex col-md-6 col-12 justify-content-start align-items-center row-gap-3"
@@ -125,4 +136,35 @@
       }
     </ng-container>
   </app-collapsible-panel>
+</ng-template>
+
+<ng-template #infoModal let-modal>
+  <div class="modal-header">
+    <h2
+      class="modal-title w-100 d-flex justify-content-between"
+      id="modal-title"
+    >
+      <span>Graph Info</span>
+      <button type="button" aria-label="Close" (click)="modal.dismiss()">
+        <app-icon [icon]="'times'"></app-icon>
+      </button>
+    </h2>
+  </div>
+
+  <div class="modal-body">
+    The graph contains the following kinds of links:
+    <ul class="container"></ul>
+    @for (rule of infoRules; track $index) {
+      <li class="row mb-4">
+        <div class="col-lg-6 col-12 h5 fw-bold">
+          {{ rule.nodeKind1 }}
+          <app-icon [icon]="'link'" />
+          {{ rule.nodeKind2 }}
+        </div>
+        <span class="col-lg-6 col-12">
+          {{ rule.description }}
+        </span>
+      </li>
+    }
+  </div>
 </ng-template>
