Make cancel button more visible

--- a/src/app/campaign/pages/graph-page/graph-page.component.html
+++ b/src/app/campaign/pages/graph-page/graph-page.component.html
@@ -130,6 +130,7 @@
             [icon]="'trash'"
             [toggleSize]="'SMALL'"
             [confirmationQuestion]="'Delete link?'"
+            [cancelButtonType]="'DARK'"
             (confirm)="store.deleteConnection(item.link.id)"
           ></app-confirmation-toggle-button>
         </div>
