--- a/src/app/campaign/pages/graph-page/graph-page.component.html
+++ b/src/app/campaign/pages/graph-page/graph-page.component.html
@@ -129,7 +129,7 @@
             [toggleSize]="'SMALL'"
             [confirmationQuestion]="'Delete link?'"
             [cancelButtonType]="'DARK'"
-            (confirm)="store.deleteConnection(item.link.id)"
+            (confirm)="onDeleteLink(item.link.id!)"
           ></app-confirmation-toggle-button>
         </div>
       }
