Fix rerouting issues

--- a/src/app/campaign/pages/diaryentry-page/diaryentry-page.component.html
+++ b/src/app/campaign/pages/diaryentry-page/diaryentry-page.component.html
@@ -8,7 +8,7 @@
     [canCreate]="store.hasWritePermission()"
     [canUpdate]="store.hasWritePermission()"
     [canDelete]="store.hasWritePermission()"
-    (diaryentryDelete)="store.deleteDiaryEntry()"
+    (diaryentryDelete)="onDelete()"
     (encounterConnectionCreate)="store.addEncounterConnection($event)"
     (encounterConnectionDelete)="store.removeEncounterConnection($event)"
     (encounterCreate)="store.addEncounter($event)"
