--- a/src/design/organisms/image-carousel/image-carousel.component.html
+++ b/src/design/organisms/image-carousel/image-carousel.component.html
@@ -28,6 +28,7 @@
       btn
       title="Create Image"
       class="mx-2"
+      aria-label="'Create Image'"
       [kind]="'PRIMARY'"
       [size]="'SMALL'"
       [icon]="'plus-square'"
@@ -39,6 +40,7 @@
   @if (images().length > 0 && canUpdate()) {
     <button
       btn
+      aria-label="'Update Image'"
       title="Update Image"
       class="mx-2"
       [kind]="'SECONDARY'"
@@ -52,6 +54,7 @@
   @if (images().length > 1 && canDelete()) {
     <button
       btn
+      aria-label="'Delete Image'"
       title="Delete Image"
       class="mx-2"
       [kind]="'DANGER'"
