--- a/src/app/campaign/pages/graph-page/graph-page.component.html
+++ b/src/app/campaign/pages/graph-page/graph-page.component.html
@@ -9,7 +9,7 @@
           [borderColorVar]="option.color"
           [isActive]="option.active"
           [isSelectable]="true"
-          (entryClick)="toggleSidebarEntry(option, $event)"
+          (entryClick)="toggleCategory(option, $event)"
         ></app-selectable-entry>
       }
     </div>
