--- a/src/app/campaign/pages/graph-page/graph-page.component.html
+++ b/src/app/campaign/pages/graph-page/graph-page.component.html
@@ -63,6 +63,13 @@
           <ng-container *ngTemplateOutlet="create" />
         }
       }
+    } @else {
+      <app-placeholder class="w-100 height-5 mb-3"></app-placeholder>
+      <app-placeholder class="w-100 vh-50 mb-1"></app-placeholder>
+      <app-placeholder class="w-100 height-3 mb-3"></app-placeholder>
+      <app-placeholder class="w-100 height-5 mb-3"></app-placeholder>
+      <app-placeholder class="w-25 height-5 mb-3"></app-placeholder>
+      <app-placeholder class="w-100 height-5 mb-3"></app-placeholder>
     }
 
     <app-article-footer
