--- a/src/custom_bootstrap.scss
+++ b/src/custom_bootstrap.scss
@@ -289,6 +289,10 @@ option {
   display: none;
 }
 
+.vh-50 {
+  height: 50vh;
+}
+
 .tooltip-inner {
   --bs-tooltip-bg: var(--bs-info-bg-subtle);
   --bs-tooltip-color: var(--bs-emphasis-color);
