Refactor config-table into its own component

--- a/src/app/administration/pages/config-administration-page/config-administration-page.component.html
+++ b/src/app/administration/pages/config-administration-page/config-administration-page.component.html
@@ -1,5 +1,6 @@
 <app-config-tables
   [tableData]="tableData()"
+  [currentCampaignId]="undefined"
   (loadTableEntries)="loadTableEntries($event)"
   (deleteTableEntry)="deleteTableEntry($event)"
   (createTableEntry)="createTableEntry($event)"
