--- a/src/app/campaign/pages/campaign-config-administration-page/campaign-config-administration-page.component.html
+++ b/src/app/campaign/pages/campaign-config-administration-page/campaign-config-administration-page.component.html
@@ -1,10 +1,8 @@
 <app-config-tables
   [tableData]="tableData()"
   [currentCampaignId]="globalStore.currentCampaign()?.pk"
-  [hasCampaignWritePermission]="store.hasWritePermission()"
-  [canDeleteGlobalEntries]="
-    !!globalStore.userData()?.isAdmin || !!globalStore.userData()?.isSuperUser
-  "
+  [hasCampaignWritePermission]="store.hasCampaignWritePermission()"
+  [canDeleteGlobalEntries]="!!globalStore.isGlobalAdmin()"
   (loadTableEntries)="loadTableEntries($event)"
   (deleteTableEntry)="deleteTableEntry($event)"
   (createTableEntry)="createTableEntry($event)"
