--- a/src/design/atoms/selectable-entry/selectable-entry.component.html
+++ b/src/design/atoms/selectable-entry/selectable-entry.component.html
@@ -16,10 +16,7 @@
       highlight: isActive(),
     }"
   >
-    <div
-      class="sidebar-border"
-      [style]="'border-left-color: var(' + borderColorVar() + ')'"
-    >
+    <div class="sidebar-border">
       <span class="mx-1"> {{ label() }} </span>
     </div>
 
