--- a/src/app/campaign/components/graph-settings-modal/graph-settings-modal.component.html
+++ b/src/app/campaign/components/graph-settings-modal/graph-settings-modal.component.html
@@ -4,7 +4,7 @@
   btn
   [kind]="'NONE'"
   [icon]="'gear'"
-  [text]="'settings'"
+  [text]="'Settings'"
   (click)="openModal(settingsModal)"
 ></button>
 
