--- a/src/app/campaign/pages/character-page/character-page.component.html
+++ b/src/app/campaign/pages/character-page/character-page.component.html
@@ -1,27 +1,24 @@
-@let character = character$();
-@let characterQuote = characterQuote$();
-@let imageServerModel = imageServerModel$();
-@let quoteServerModel = quoteServerModel$();
-@let encounterServerModel = encounterServerModel$();
+@let character = store.character();
 
 @if (character != null) {
   <app-character
     [character]="character"
     [characterServerModel]="store.characterServerModel()"
-    [characterQuote]="characterQuote"
-    [campaignCharacters]="campaignCharacters() ?? []"
-    [campaignNPCCharacters]="campaignNPCCharacters() ?? []"
-    [campaignOrganizations]="campaignOrganizations() ?? []"
-    [campaignLocations]="campaignLocations() ?? []"
+    [characterQuote]="store.characterQuote()"
+    [campaignCharacters]="store.campaignCharacters() ?? []"
+    [campaignNPCCharacters]="store.campaignNPCCharacters() ?? []"
+    [campaignOrganizations]="store.campaignOrganizations() ?? []"
+    [campaignLocations]="store.campaignLocations() ?? []"
     [serverUrl]="serverUrl"
-    [encounters]="campaignEncounters() ?? []"
-    [sessions]="campaignSessions() ?? []"
-    [quoteServerModel]="quoteServerModel"
-    [imageServerModel]="imageServerModel"
-    [encounterServerModel]="encounterServerModel"
-    [canUpdate]="hasWritePermission$()"
-    [canCreate]="hasWritePermission$()"
-    [canDelete]="hasWritePermission$()"
+    [encounters]="store.campaignEncounters() ?? []"
+    [sessions]="store.campaignSessions() ?? []"
+    [quoteServerModel]="store.quoteServerModel()"
+    [imageServerModel]="store.imageServerModel()"
+    [encounterServerModel]="store.encounterServerModel()"
+    [campaignClasses]="store.campaignPlayerClasses() ?? []"
+    [canUpdate]="store.hasWritePermission()"
+    [canCreate]="store.hasWritePermission()"
+    [canDelete]="store.hasWritePermission()"
     (characterDelete)="onCharacterDelete()"
     (characterUpdate)="onCharacterUpdate($event)"
     (createImage)="onCreateImage($event)"
@@ -39,5 +36,7 @@
     (refreshQuote)="onRefreshQuote()"
     (organizationMembershipCreate)="store.createMembership($event)"
     (organizationMembershipDelete)="store.deleteMembership($event)"
+    (addClass)="store.addClass($event.pk!)"
+    (removeClass)="removeClass($event.pk!)"
   ></app-character>
 }
