--- a/src/design/atoms/selectable-entry/selectable-entry.component.html
+++ b/src/design/atoms/selectable-entry/selectable-entry.component.html
@@ -18,6 +18,10 @@
   >
     <div class="sidebar-border">
       <span class="mx-1"> {{ label() }} </span>
+      @let entryIcon = icon();
+      @if (entryIcon) {
+        <app-icon [icon]="entryIcon"></app-icon>
+      }
     </div>
 
     @if (isActive()) {
