--- a/src/design/organisms/mobile-header/mobile-header.component.html
+++ b/src/design/organisms/mobile-header/mobile-header.component.html
@@ -2,7 +2,6 @@
   <div class="container-fluid">
     @if (canShowSidebar()) {
       <button
-        btn
         class="navbar-toggler"
         type="button"
         data-bs-toggle="offcanvas"
@@ -26,16 +25,51 @@
     </a>
 
     @if ((online$ | async) === false) {
-      <app-icon
-        class="navbar-toggler"
-        [ngbTooltip]="tooltipContent"
-        [placement]="'left-bottom'"
+      <button
+        btn
+        aria-label="Toggle offline info modal"
+        [kind]="'WARNING-OUTLINE'"
         [icon]="'triangle-exclamation'"
-      ></app-icon>
+        (click)="openModal(offlineInfoModal)"
+      ></button>
     }
   </div>
 </nav>
 
 <ng-template #tooltipContent>
   <div class="m-0 p-0">You are currently offline</div>
+</ng-template>
+
+<ng-template #offlineInfoModal let-modal>
+  <div class="modal-header">
+    <h5 class="modal-title">You're Offline</h5>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.dismiss()"
+    ></button>
+  </div>
+  <div class="modal-body">
+    <p>
+      Your device is currently offline. You will still be able to read most
+      content that you can while online, but some limitations apply:
+    </p>
+    <ul class="ps-3">
+      <li>
+        <strong> You can't create, update or delete articles. </strong><br />
+        Elements linking to such sites will be hidden.
+      </li>
+      <li><strong> You can't upload files such as images </strong></li>
+      <li>
+        <strong> You can't search </strong>
+      </li>
+      <li>
+        <strong> You can't visit sites requiring online access. </strong><br />
+        Typically this is because their data is too large to download (i.e.
+        Recordings), or their sole purpose is data modification which is
+        unavailable while offline.
+      </li>
+    </ul>
+  </div>
 </ng-template>
