Disable search while offline

--- a/src/app/campaign/pages/graph-page/graph-page.component.html
+++ b/src/app/campaign/pages/graph-page/graph-page.component.html
@@ -51,6 +51,7 @@
         [btnAriaLabel]="
           'Searches for an article node in the graph and centers it if it can find one'
         "
+        [canSearch]="true"
         (appSearch)="nodeQuery$.next($event)"
       ></app-search-field>
 
