--- a/src/design/templates/home/home.component.html
+++ b/src/design/templates/home/home.component.html
@@ -27,6 +27,7 @@
       [btnAriaLabel]="
         'Triggers a search for any articles matching the query in this campaign'
       "
+      [canSearch]="(isOnline$ | async) === true"
       (appSearch)="appSearch.emit($event)"
     ></app-search-field>
 
