--- a/src/app/design/organisms/encounter-accordion/encounter-accordion.component.html
+++ b/src/app/design/organisms/encounter-accordion/encounter-accordion.component.html
@@ -3,7 +3,7 @@
     @for (encounter of encounters(); track encounter.pk) {
       <div ngbAccordionItem [id]="'static-' + $index">
         <header ngbAccordionHeader>
-          <button btn ngbAccordionButton class="panel-title">
+          <button ngbAccordionButton class="panel-title">
             <strong
               class="encounter-title"
               [innerHTML]="encounter.name"
