--- a/src/app/design/organisms/location-accordion/location-accordion.component.html
+++ b/src/app/design/organisms/location-accordion/location-accordion.component.html
@@ -19,7 +19,7 @@
     <div ngbAccordionItem [id]="'static-' + $index">
       <!-- Header -->
       <div ngbAccordionHeader class="button-container">
-        <button btn [kind]="'NONE'" ngbAccordionButton>
+        <button ngbAccordionButton>
           <a class="location-title" [routerLink]="entry.link">
             {{ entry.value.name }}
           </a>
