--- a/src/app/design/organisms/sidebar/sidebar.component.html
+++ b/src/app/design/organisms/sidebar/sidebar.component.html
@@ -20,8 +20,10 @@
           <h4 class="brand__home-link-text">
             <img
               class="brand__icon"
-              [src]="serverUrl + campaign()?.icon"
+              [ngSrc]="serverUrl + campaign()?.icon"
               alt="To Home Page"
+              [width]="32"
+              [height]="32"
             />
             <div class="brand__home-link-text-text">
               {{ campaign()?.name }}
