--- a/src/app/design/templates/location-template/location-template.component.html
+++ b/src/app/design/templates/location-template/location-template.component.html
@@ -22,20 +22,7 @@
       <!-- String indicating all parent_locations -->
       @if (location().parent_location_list?.length ?? 0 > 0) {
         <h5 class="col-12 location__subheading subheading">
-          @for (
-            parentLocation of parentLocations;
-            track parentLocation;
-            let i = $index
-          ) {
-            <a [routerLink]="parentLocation.link">
-              {{ parentLocation.label }}
-            </a>
-            <app-icon
-              class="subheading__icon"
-              [icon]="'arrow-right'"
-            ></app-icon>
-          }
-          {{ location().name }}
+          <app-breadcrumb-list [linkEntries]="parentLocations()" />
         </h5>
       }
     </div>
